--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,32 +1,57 @@
-<h4 class="text-xs-center">Login</h4>
-<form [formGroup] = "form" (ngSubmit) = "onSubmit()">
-  <h5>{{ errorMessage }}</h5>
-  <div class="form-group">
-    <label for="userName">UserName</label>
-    <input
-      type="text"
-      class="form-control underlined"
-      id="userName"
-      placeholder="Input your UserName"
-      formControlName="userName"
-    >
+<div class="auth">
+  <div class="auth-container">
+    <div class="card">
+      <header class="auth-header">
+        <h1 class="auth-title">
+          <div class="logo">
+            <span class="l l1"></span>
+            <span class="l l2"></span>
+            <span class="l l3"></span>
+            <span class="l l4"></span>
+            <span class="l l5"></span>
+          </div>
+          Auth application
+        </h1>
+      </header>
+      <div class="auth-content">
+        <h4 class="text-xs-center">Login</h4>
+        <form [formGroup]="form" (ngSubmit)="onSubmit()">
+          <h5>{{ errorMessage }}</h5>
+          <div class="form-group">
+            <label for="userName">UserName</label>
+            <input
+              type="text"
+              class="form-control underlined"
+              id="userName"
+              placeholder="Input your UserName"
+              formControlName="userName"
+            >
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input
+              type="password"
+              class="form-control underlined"
+              id="password"
+              placeholder="Password"
+              formControlName="password"
+            >
+          </div>
+          <div class="form-group">
+            <button type="submit" class="btn btn-block btn-primary">Enter</button>
+          </div>
+          <div class="form-group">
+            <p class="text-muted text-xs-center">
+              Don't have an account? <a routerLink="/registration">Register</a>
+            </p>
+          </div>
+        </form>
+
+      </div>
+    </div>
   </div>
-  <div class="form-group">
-    <label for="password">Password</label>
-    <input
-      type="password"
-      class="form-control underlined"
-      id="password"
-      placeholder="Password"
-      formControlName="password"
-    >
-  </div>
-  <div class="form-group">
-    <button type="submit" class="btn btn-block btn-primary">Enter</button>
-  </div>
-  <div class="form-group">
-    <p class="text-muted text-xs-center">
-      Don't have an account? <a routerLink="/registration">Register</a>
-    </p>
-  </div>
-</form>
+</div>
+
+
+
+
